<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>jp.co.chamc.example</groupId>
  <artifactId>example20180513</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>war</packaging>

  <name>example20180513</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
	<dependency>
	        <groupId>javax.ws.rs</groupId>
	        <artifactId>javax.ws.rs-api</artifactId>
	        <version>2.0.1</version>
	</dependency>

	<!-- JavaEE -->
	<!-- 
    <dependency>
      <groupId>org.jboss.spec</groupId>
      <artifactId>jboss-javaee-7.0</artifactId>
      <version>1.0.2.Final</version>
      <type>pom</type>
      <scope>provided</scope>
    </dependency>
     -->

	<dependency>
	    <groupId>org.jboss.resteasy</groupId>
	    <artifactId>resteasy-spring</artifactId>
	    <version>3.0.10.Final</version>
	</dependency>
	<dependency>
	    <groupId>org.jboss.resteasy</groupId>
	    <artifactId>resteasy-client</artifactId>
	    <version>3.0.10.Final</version>
	</dependency>
	<dependency>
	    <groupId>org.jboss.resteasy</groupId>
	    <artifactId>resteasy-jaxb-provider</artifactId>
	    <version>3.0.10.Final</version>
	</dependency>
	<dependency>
	    <groupId>junit</groupId>
	    <artifactId>junit</artifactId>
	    <version>4.12</version>
	    <scope>test</scope>
	</dependency>
	
	<dependency>
	    <groupId>org.mockito</groupId>
	    <artifactId>mockito-core</artifactId>
	    <version>1.10.19</version>
	    <scope>test</scope>
	</dependency>
	
	<dependency>
	    <groupId>org.jboss.spec.javax.servlet</groupId>
	    <artifactId>jboss-servlet-api_3.1_spec</artifactId>
	    <version>1.0.0.Final</version>
	</dependency>
	<dependency>
	    <groupId>org.jboss.resteasy</groupId>
	    <artifactId>tjws</artifactId>
	    <version>3.0.10.Final</version>
	    <scope>test</scope>
	</dependency>

  </dependencies>
  
    <build>
    	<pluginManagement>
    		<plugins>
    			<!-- JaCoCo -->
    			<plugin>
    				<groupId>org.apache.maven.plugins</groupId>
    				<artifactId>maven-surefire-plugin</artifactId>
    				<configuration>
    					<argLine>${jacocoArgs} -Xmx256m -XX:MaxPermSize=256m</argLine>
    				</configuration>
    			</plugin>
    		</plugins>
    	</pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                </configuration>
            </plugin>
            <!-- JaCoCo -->
            <plugin>
            	<groupId>org.jacoco</groupId>
            	<artifactId>jacoco-maven-plugin</artifactId>
            	<version>0.8.1</version>
            	<executions>
            		<execution>
            			<id>prepare-agent</id>
            			<phase>test-compile</phase>
            			<goals>
            				<goal>prepare-agent</goal>
            			</goals>
            			<configuration>
            				<propertyName>jacocoArgs</propertyName>
            				<includes>
            					<include>*</include>
            				</includes>
            			</configuration>
            		</execution>
            		<execution>
            			<id>report</id>
            			<phase>prepare-package</phase>
            			<goals>
            				<goal>report</goal>
            			</goals>
            		</execution>
            	</executions>
            </plugin>
        </plugins>
    </build>
    
    <reporting>
    	<plugins>
    		<plugin>
    			<groupId>org.jacoco</groupId>
    			<artifactId>jacoco-maven-plugin</artifactId>
    		</plugin>
    	</plugins>
    </reporting>

</project>
